[gd_scene load_steps=10 format=2]

[ext_resource path="res://Helpers/Home.gd" type="Script" id=1]
[ext_resource path="res://Assets Kenney/Base.png" type="Texture" id=2]
[ext_resource path="res://Assets Kenney/Gema.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 22.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="Base" type="Node2D"]
script = ExtResource( 1 )
start_color = Color( 0.709804, 0.984314, 0.572549, 1 )
end_color = Color( 0.823529, 0.380392, 0.380392, 0.886275 )

[node name="TilesPacked" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 2 )
region_rect = Rect2( 180, 90, 18, 36 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 0, 20 )
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="Gema" type="AnimatedSprite" parent="."]
modulate = Color( 0.709804, 0.984314, 0.572549, 1 )
position = Vector2( 0, -15 )
frames = SubResource( 6 )
frame = 3
playing = true

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
